tests/frontend/fail/array/out_of_bounds_storage2.act
constructor of B
interface constructor()

creates

  int x := 0
  int y := 0
  int[3] a := [1,2,3]

behaviour f of B
interface f()

case -2 <= x and x < 0:

  storage

    a[0-x] => a[1]

case 0 <= x and x <= 2:

  storage

    a[x+1] => 4

case x < -2 or 2 < x:

  storage

    a[1] => 0
  

